@@ -1,3 +1,10 @@
+2003-02-11  Per Bothner  <per@bothner.com>
+
+	* XQuery.java (getInstance): Move save/restore of current Environment
+	from here ...
+	(<init>):  .. to here.
+	(registerEnvironment):  Add call to Environment.setCurrent.
+
 2003-01-12  Per Bothner  <per@bothner.com>
 
 	* XQuery.java (Prompter.apply1): Always emit readState character.
